--- a/ACL4SSR_Online_Full_D.ini
+++ b/ACL4SSR_Online_Full_D.ini
@@ -45,6 +45,7 @@ ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🤖 ‍OpenAI+Bing,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/OpenAI+Bing.list
 ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+ruleset=🇦🇺 澳洲内容,https://raw.githubusercontent.com/Domixxx/dmnk-clash/main/Australia%20Content.list
 ruleset=🇦🇺 澳洲内容,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/9News/9News.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/LM-Firefly/Rules/master/GlobalMedia.list
